# snippets

./: .gitignore  package-lock.json  package.json  readme.md  todo.md
.github/: release.yml
functions/: eventemitter.js
jetbrain-platform-plugin/: README.md
snippetTexts/: .gitignore  .prettierrc.js  application.desktop  bless.js  canvas.html  capitalize.js  checkObjectValueEqualKey.js  china.txt  commander.ts  compose.js  cxk.js  express.js  function.sh  getArrayKeyMap.js  getDateString.js  getEnumFromArray.js  helloworld.c  isEven.js  isNewerVersion.js  isOdd.js  log_split.sh  logger.js  nginx.yaml  nodejs_eventemitter.js  packageDescription.sh  packageVersion.sh  plantuml_startmindmap.md  plantuml_startuml.md  random.js  react_withPersistentData.js  react_withTiming.js  rgbToHex.js  switchTwoValue.js  to_singleton.js  uniqueArray.js  useFocusEffect.js  ws.js  ws_web.js
snippets/: $.js  Capitalize.js  adb_force_stop.js  adb_packages_names.js  ajv_array.js  ajv_inner_array.js  ajv_inner_object.js  ajv_object.js  alova.js  array1to10.js  array_func.js  array_item_remove_end_mutable.js  array_item_remove_first_immutable.js  array_item_remove_first_mutable.js  array_item_remove_immutable.js  array_item_remove_mutable.js  arrow_function.js  bin_useBash.js  (+309 more)
snippets-jetBrains/: es.xml  javascript.xml
test/: CMakeLists.txt  Component.js  abbb_ccc.js  bash.sh  cc-dd.h  cc.h  css.css  dart.dart  docker-compose.yml  go.go  index.html  index.js  index.md  index.ts  index.vue  makefile  powerhsell.ps1  sass.sass  xxx.plantuml
test/Component/: VueComponent.vue  react.jsx
(+43 files in other folders)
